Forgot to commit these files on last commit; just fixed the save/load window z-index (which was displayed below some map items).

--- a/mapcubus.css
+++ b/mapcubus.css
@@ -188,6 +188,7 @@ fieldset { padding:0; border:0; margin-top:25px; }
     position: fixed !important;
     top: 100px !important;
     left: 50% !important;
+    z-index: 10000;
 }
 
 .ui-dialog {
